--- a/index.html
+++ b/index.html
@@ -6,14 +6,44 @@
     </title>
     <link href="stopwatch.css" rel="stylesheet">
     <script src="stopwatch.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
   </head>
-  <body style="background-color: black;">
-    <div id="stopwatch" style="text-align: center; margin-top: 200px; margin-left: 500px; border-radius: 360px; height: 180px; 
-    width: 400px; padding-top: 80px; background-color: rgb(53, 51, 51); color: white;">
+  <body style="background-color: black; text-align: center;"> 
+
+
+    <div class="row">
+
+      <div class="col-sm-12 col-md-12 col-lg-4"></div>
+      <div class="col-sm-12 col-md-12 col-lg-4" style=" padding: 100px;">
+
+      <div class="container" id="stopwatch" style="text-align: center; border-radius: 360px !important; height: 240px; 
+       width: 400px; padding-top: 40px; background-color: rgb(53, 51, 51); color: white;">
+      <div style="color: white;" id="sw-time">00:00:00</div>
+      <input style="background-color: black; border: 1px solid grey; border-radius: 30px; margin-top: 20px; margin-bottom: 40px;" type="button" value="Reset" id="sw-rst" disabled/>
+      <input style="background-color: black; border: 1px solid grey; border-radius: 30px;" type="button" value="Start" id="sw-go" disabled/>
+    </div>
+    
+
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-4"></div>
+
+    </div>
+
+    <!-- <div id="stopwatch" style="text-align: center; border-radius: 360px; height: 180px; 
+    width: 400px; padding-top: 20px; background-color: rgb(53, 51, 51); color: white;">
       <div style="color: white;" id="sw-time">00:00:00</div>
       <input style="background-color: black; border: 1px solid grey; border-radius: 30px; margin-top: 20px;" type="button" value="Reset" id="sw-rst" disabled/>
       <input style="background-color: black; border: 1px solid grey; border-radius: 30px;" type="button" value="Start" id="sw-go" disabled/>
     </div>
-    
+     -->
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
